@@ -1,7 +1,7 @@
 <!--
     Tura - Application generation solution
 
-    Copyright 2008-2022 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
+    Copyright 2008-2023 2182342 Ontario Inc ( arseniy.isakov@turasolutions.com )
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>sales-analyzer</groupId>
 		<artifactId>sales-analyzer-parent</artifactId>
-		<version>6.1.0</version>
+		<version>6.1.1</version>
 	</parent>
 
 	<artifactId>integration-testing</artifactId>
@@ -250,6 +250,15 @@
 			</testResource>
 		</testResources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
